test/corpus/expressions.test
==============
declaration
:language(revo)
==============

let my_variable = "cool string"

---

(source
  (declaration
    pattern: (ident)
    value: (string)))

================
Typed declaration
:language(revo)
================

let my_variable: string = "cool string"

---

(source
  (declaration
    pattern: (ident)
    type: (primitive)
    value: (string)))

===============
Optional type
:language(revo)
===============

let my_variable: string? = :nil

---

(source
  (declaration
    pattern: (ident)
    type: (optional_type
      (primitive))
    value: (atom)))

====================
Functions in a tuple
:language(revo)
====================

(a(), a:b(), a.b())

---

(source
  (tuple
    (function_call
      (ident)
      (parameters))
    (ident)
    (function_call
      (ident)
      (parameters))
    (ident)
    (function_call
      (ident)
      (parameters))))
        
==============
Index accessor
:language(revo)
==============

thing[1]
thing[:symb]
thing["string"]

---

(source
  (ident)
  (index
    (number))
  (ident)
  (index
    (atom))
  (ident)
  (index
    (string)))

===============================
Method call in an if expression
:language(revo)
===============================

if :true v.component_id() else :thing

---

(source
  (if_expression
    (expression
      (atom))
    (expression
      (ident)
        (function_call
          (ident)
          (parameters)))
      (expression
        (atom))))
        
===============
Bool function
:language(revo)
===============

fn has?() :true

---

(source
  (function
    (ident)
    (parameters)
    (expression
      (atom))))
  
==============
Index accessor
:language(revo)
==============

thing[1]
thing[:symb]
thing["string"]

---

(source
  (ident)
  (index
    (number))
  (ident)
  (index
    (atom))
  (ident)
  (index
    (string)))

===============
Pipe
:language(revo)
===============

"asdf"
  |> inspect()

---

(source
  (operation_expression
    (string)
    (operator)
    (function_call
      (ident)
      (parameters))))

  
======================
Pipe underscore method
:language(revo)
======================

"oppa"
  |> _:gangnam_style()

---

(source
  (operation_expression
    (string)
    (operator)
    (ident)
    (function_call
      (ident)
      (parameters))))

===============
Method in pipe
:language(revo)
===============

name |> fn(u) u:bump()

---

(source
  (operation_expression
    (ident)
    (operator)
    (function
      (parameters
        (ident))
      (expression
        (ident)
        (function_call
          (ident)
          (parameters))))))

===============
Or else
:language(revo)
===============

:false orelse 0

---

(source
  (operation_expression
    (atom)
    (operator)
    (number)))

====================
Destructuring tuples
:language(revo)
====================

let six, seven = (6, 7)

---

(source
  (declaration
    pattern:
      (idents
        (ident)
        (ident))
    value: (tuple
      (number)
      (number))))
