test/corpus/functions.test
===============
Basic call
:language(revo)
===============

fun()

---

(source
  (function_call
    (ident)
    (parameters)))

===============
Call with table
:language(revo)
===============

fun({ 0 })

---

(source
  (function_call
    (ident)
    (parameters
      (parameter
        (table
          (number))))))

==============
Basic function
:language(revo)
==============

fn milk() 0

---

(source
  (function
    (ident)
    (parameters)
    (expression
      (number))))
      
==============
Basic function with return
:language(revo)
==============

fn milk() return 0

---

(source
  (function
    (ident)
    (parameters)
    (expression
      (return (number)))))
      
==============
Basic public function
:language(revo)
==============

pub fn milk() 0

---

(source
  (function
    (visibility_modifier)
    (ident)
    (parameters)
    (expression
      (number))))

==================
Anonymous function
:language(revo)
==================

fn(a, b) string(a) < string(b)

---

(source
  (function
    (parameters
      (parameter
      name: (ident))
      (parameter
      name: (ident)))
    body: (expression
      (operation_expression
        left: (function_call
          name: (ident)
          (parameters
            (parameter
            name: (ident))))
        (operator)
        right: (function_call
          name: (ident)
          (parameters
            (parameter
            name: (ident))))))))
        
=====================
Block public function
:language(revo)
=====================

pub fn egg() do
	return 1
end

---

(source
  (function
    (visibility_modifier)
    (ident)
    (parameters)
    (do_block
      (return (number)))))

======================
Direct struct function
:language(revo)
======================

fn new() Archetypes {
  _index = {},
}

---

(source
  (function
    (ident)
    (parameters)
    (struct
      (type)
      (table
        (field
          (ident)
          (table))))))

===============
Nested function
:language(revo)
===============

fun(fun())

---

(source
  (function_call
    (ident)
    (parameters
      (parameter
        (function_call
          (ident)
          (parameters))))))

======================
Union return one liner
:language(revo)
======================

fn thing() -> string | Thing | int "a"

---

(source
  (function
    (ident)
    (parameters)
    (return_type
      (union
        (primitive)
        (type)
        (primitive)))
    (expression (string))))

==================
Apply try operator
:language(revo)
==================

number("42")?

---

(source
  (function_call
    (ident)
    (parameters
      (parameter
        (string)))))

===============
Spawning fibers
:language(revo)
===============

spawn add(20, 22)

---

(source
  (spawn
    (function_call
      (ident)
      (parameters
        (parameter
          (number))
        (parameter
          (number))))))

==========================
Scoped function definition
:language(revo)
==========================

fn tbl.double() 0
fn tbl:double() 0

---

(source
  (ident)
  (scoped
    (function_call
      (parameters)
      (expression
        (number))))
  (scoped
    (function_call
      (parameters)
      (expression
        (number)))))

=================
Default arguments
:language(revo)
=================

fn f(a = 2) 0

---

(source
  (function
    name: (ident)
    (parameters
      (parameter
        name: (ident)
        default: (number)))
    body: (expression
      (number))))

=================
Optional arguments
:language(revo)
=================

fn f(?a) 0

---

(source
  (function
    (ident)
    (parameters
      (parameter
        (ident)))
    (expression
      (number))))
