test/corpus/structs.test
===============
Structs
:language(revo)
===============

pub struct MyStruct {
	field_1: SomeType,
	_field_2: :nil,
    fn my_fn() do return "cool" end,
    fn short() 2,
}

---

(source
  (struct_definition
    (visibility_modifier)
    (type)
    (table
      (field
        (ident)
        (type))
      (field
        (ident)
        (atom))
      (function
        (ident)
        (parameters)
          (do_block (return (string))))
      (function
        (ident)
        (parameters)
        (expression (number))))))

===============
Empty table
:language(revo)
===============

{}

---

(source
  (table))

===============
List
:language(revo)
===============

{ 0, 1 }

---

(source
  (table
    (number)
    (number)))

===============
Empty struct
:language(revo)
===============

Thing {}

---

(source
  (struct
    (type)
    (table)))

===============
Assigned struct
:language(revo)
===============

struct User { name = "me", age = 99 }

---

(source
  (struct_definition
    name: (type)
    body: (table
      (field
        name: (ident)
        value: (string))
      (field
        name: (ident)
        value: (number)))))
        
==================
Struct constructor
:language(revo)
==================

User ({ name: string = "me", age = 99 })

---

(source
  (struct
    name: (type)
    body: (table
      (field
        name: (ident)
        type: (primitive)
        value: (string))
      (field
        name: (ident)
        value: (number)))))
